added user login and registration

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -16,9 +16,19 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
+      "@components/*": [
+        "components/*"
+      ],
+      "@services/*": [
+        "services/*"
+      ],
+      "@types": [
+        "types/index.ts"
+      ],
+      "@styles/*": [
+        "styles/*"
       ]
     },
     "forceConsistentCasingInFileNames": true
