--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "i18next": "^23.7.6",
+    "lucide-react": "^0.468.0",
     "next": "^14.2.6",
     "next-i18next": "^15.0.0",
     "react": "^18.3.1",
@@ -25,7 +26,7 @@
     "@types/react-datepicker": "^4.15.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "4.9.5"
   }
 }
